feat(api): ensure only specific document version inherits folder stage after move (applics-1126)
