# apps/api/src/server/applications/application/documents/document.validators.js
@@ -204,6 +204,10 @@ export const validateDocumentIds = composeMiddleware(
 
 export const validateDocumentsToMove = composeMiddleware(
 	body('documents').exists().withMessage('Must provide documents to move'),
+	body('documents').isArray().withMessage('Documents must be an array'),
+	body('documents.*.documentGuid').exists().withMessage('Must provide a document guid'),
+	body('documents.*.fileName').exists().withMessage('Must provide a document file name'),
+	body('documents.*.version').exists().withMessage('Must provide a document version'),
 	body('destinationFolderId').exists().withMessage('Must provide a destination folder id'),
 	body('destinationFolderStage').exists().withMessage('Must provide a destination folder stage'),
 	validationErrorHandler
